feat: Complete AWE Polar stress monitoring system with ML, BLE, and Streamlit UI

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ Thumbs.db
 
 # Streamlit
 .streamlit/
+
+# Local Setup Guides (not needed in repo)
+GITHUB_PUSH_GUIDE.md
+QUICK_PUSH.md
+CHECKLIST.md
