feat: Refactor project structure and add TabNet model
This commit introduces a major refactoring of the project structure and adds support for the TabNet model.

- **Project Refactoring:**
  - Reorganized the project into src and scripts directories for better modularity.
  - Core application logic moved to src/awe_polar.
  - Entry points for training, prediction, and the Streamlit app are now in the scripts directory.

- **New Features:**
  - Integrated the TabNet model for stress prediction, adding 	orch, pytorch-tabnet, shap, and lime as dependencies.
  - Added scripts/download_datasets.py to streamline dataset acquisition.
  - Included scripts/predict_realtime.py for real-time predictions.
  - Added scripts/replicate_tabnet_stress.py to replicate the TabNet model.

- **Configuration and Documentation:**
  - Updated .gitignore to exclude .vs/, datasets/, and Papers/.
  - Updated README.md, setup.ps1, and start.ps1 to align with the new project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ ENV/
 # IDE
 .vscode/
 .idea/
+.vs/
 *.swp
 *.swo
 *~
@@ -45,6 +46,8 @@ ENV/
 *.csv
 *.xlsx
 all_hrv_data*.csv
+datasets/
+Papers/
 
 # Keep sample generator script but ignore generated data
 !generate_sample_data.py
