--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Data Processing and Analysis
 pandas
 openpyxl
-numpy<2
+numpy>=2
 numba<0.60; python_version < "3.13"
 
 # Machine Learning
@@ -15,13 +15,14 @@ lime
 # Visualization
 matplotlib
 seaborn
+plotly
 
 # Bluetooth Low Energy
 bleak
 
 # Web Application
-streamlit
-altair<5
+streamlit>=1.34.0
+altair>=5
 
 # OpenAI Integration
 openai
